# qir-translator

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yaml  azure-pipelines.yml
docs/: conf.py  index.rst  requirements.txt
src/: lib.rs  main.rs  test.qasm
src/qasm2qir/: arguments.rs  listener.rs  mod.rs
