[package]
name = "qir-translator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Source-to-source translator for Quantum programming languages."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyqir-generator = { path = "../pyqir/pyqir-generator" }
qasm = "1.0.0"
log = "0.4.14"

[lib]
name = "qir_translator"
